# navar

./: Cargo.toml  README.md
examples/: navar_fetch.rs
navar-example/: Cargo.toml
navar-example/src/: mock_discovery.rs
navar-example/tests/: iroh_hyper.rs  tokio_hyper.rs
navar-h3/: Cargo.toml
navar-h3/src/: adapter.rs  lib.rs
navar-hyper/: Cargo.toml
navar-hyper/src/: lib.rs
navar-iroh/: Cargo.toml
navar-iroh/src/: lib.rs
navar-mocks/: Cargo.toml
navar-mocks/src/: lib.rs
navar-tokio/: Cargo.toml
navar-tokio/src/: lib.rs
src/: application.rs  base_service.rs  bound_request.rs  lib.rs  response_helpers.rs  service.rs  transport.rs
src/bound_request/: json.rs
src/response_helpers/: ndjson.rs  sse.rs
tests/: iroh_h3.rs  iroh_hyper.rs  request_helpers.rs  response_helpers.rs  tokio_hyper.rs
