[workspace]
resolver = "2"
members = ["navar-hyper", "navar-iroh", "navar-tokio"]

[package]
name = "navar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11"
futures-lite = "2.6"
http = "1.4"
http-body = "1.0"
http-body-util = "0.1.3"

[dev-dependencies]
navar-tokio = {path = "./navar-tokio", features = ["tls"]}
navar-iroh = {path = "./navar-iroh"}
navar-hyper = {path = "./navar-hyper"}
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "io-util"] }
axum = { version = "0.8.8", features = ["http2"] }
tokio-rustls = "0.26.4"
rustls = "0.23.36"
rustls-pemfile = "2.2.0"
rcgen = "0.14.6"
hyper-util = "0.1.19"
iroh = "0.95.1"
