[package]
name = "navar-h3"
version = "0.1.0"
edition = "2024"
readme = "../README.md"
license = "MIT OR Apache-2.0"
description = "Modular, transport-agnostic high-level HTTP client for Rust"

[dependencies]
navar = { version = "0.1.0", path = ".." }
tokio = { version = "1", features = ["rt"] }
tokio-util = { version = "0.7", features = ["compat"] }
anyhow = "1.0"
h3 = "0.0.8"
