[package]
name = "navar-hyper"
version = "0.1.0"
edition = "2024"

[dependencies]
navar = { path = ".." }
hyper = { version = "1.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio = { version = "1", features = ["rt"] } # Potrzebne do spawnowania połączenia
tokio-util = { version = "0.7", features = ["compat"] }
anyhow = "1.0"
