[package]
name = "navar-hyper"
version = "0.1.0"
edition = "2024"
readme = "../README.md"
license = "MIT OR Apache-2.0"
description = "Modular, transport-agnostic high-level HTTP client for Rust"

[dependencies]
navar = { version = "0.1.0", path = ".." }
hyper = { version = "1.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio = { version = "1", features = ["rt"] }
tokio-util = { version = "0.7", features = ["compat"] }
anyhow = "1.0"
