[package]
name = "navar-iroh"
version = "0.1.0"
edition = "2024"
readme = "../README.md"
license = "MIT OR Apache-2.0"
description = "Modular, transport-agnostic high-level HTTP client for Rust"

[dependencies]
navar = { version = "0.1.0", path = ".." }
iroh = "0.95.1"
tokio = { version = "1", features = ["sync"] }
anyhow = "1.0"
tokio-util = { version = "0.7", features = ["compat"] }
