[package]
name = "navar-tokio"
version = "0.1.0"
edition = "2024"

[features]
default = []
tls = ["dep:tokio-rustls", "dep:rustls", "dep:webpki-roots"]

[dependencies]
navar = { path = ".." }
tokio = { version = "1", features = ["net"] }
tokio-util = { version = "0.7", features = ["compat"] }
anyhow = "1.0"
rustls = { version = "0.23.36", optional = true }
tokio-rustls = { version = "0.26.4", optional = true }
webpki-roots = { version = "0.26", optional = true }
