[package]
name = "navar-tokio"
version = "0.1.0"
edition = "2024"
readme = "../README.md"
license = "MIT OR Apache-2.0"
description = "Modular, transport-agnostic high-level HTTP client for Rust"

[features]
default = []
tls = ["dep:tokio-rustls", "dep:rustls", "dep:webpki-roots"]

[dependencies]
navar = { version = "0.1.0", path = ".." }
tokio = { version = "1", features = ["rt", "net", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }
anyhow = "1.0"
rustls = { version = "0.23.36", optional = true }
tokio-rustls = { version = "0.26.4", optional = true }
webpki-roots = { version = "1.0.5", optional = true }
